--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -62,6 +62,42 @@ html {
     width: 50%;
 }
 
+/* DATOS */
+.divdatos {
+    width: 100%;
+    height: 50vh;
+    padding: 20px;
+    background-color: var(--color-azulclaro);
+    color: var(--color-blanco);
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.divdatos input {
+    width: 200px;
+    height: 40px;
+}
+
+#newpass {
+    background-color: var(--color-azulclaro);
+}
+
+.btndatos {
+    background-color: var(--color-azuloscuro);
+    color: var(--color-blanco);
+    border-radius: 5px !important;
+    padding: 3px 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.btndatos:hover {
+    background-color: var(--color-negro);
+    color: var(--color-blanco);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
 /* ESCANER */
 .camara {
     display: flex;
@@ -869,6 +905,19 @@ textarea:focus {
     .qr-scanner .box {
         width: 350px;
         height: 500px;
+    }
+
+    .divdatos {
+        font-size: 15px;
+    }
+
+    .divdatos input {
+        width: 130px;
+        height: 30px;
+    }
+
+    .btndatos {
+        font-size: 12px;
     }
 
     #sidebar {
