--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -39,11 +39,6 @@ html {
 
 
 
-
-
-
-
-
 .expandir {
     border-radius: 4px;
     overflow: hidden;
@@ -92,6 +87,74 @@ html {
     /* Elige la altura que desees */
     transition: max-height 0.5s ease-in-out;
 }
+
+
+/* MODALES */
+
+/* CURSOS */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
