--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -10,6 +10,27 @@ body {
     margin: 0;
 }
 
+/* Para navegadores webkit (Chrome, Safari, Brave) */
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
+}
+
+/* Para Mozilla Firefox */
+::-moz-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
+}
+
+/* Para navegadores Microsoft Edge */
+::-ms-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
+}
+
 :root {
     --color-negro: #000;
     --color-azuloscuro: #142c44;
@@ -160,6 +181,27 @@ html {
 
 
 /* COSAS VARIAS */
+
+.fc .fc-scrollgrid-section-liquid>td {
+    border: none !important;
+}
+
+.fc .fc-scrollgrid-liquid {
+    border: none !important;
+}
+
+.fc .fc-scrollgrid-section-footer>*,
+.fc .fc-scrollgrid-section-header>* {
+    border: none !important;
+}
+
+.fc .fc-toolbar.fc-header-toolbar {
+    color: var(--color-azulmasclaro);
+    text-transform: uppercase;
+    text-align: right;
+}
+
+
 .fc .fc-daygrid-day.fc-day-today {
     background-color: #eeeeee;
     color: #000;
@@ -169,9 +211,24 @@ html {
     border-radius: 25px;
 }
 
+#cursos{
+    overflow: scroll;
+}
+
+#alumnos{
+    overflow: scroll;
+}
+
+#profesores{
+    overflow: scroll;
+}
+
+#asignaturas{
+    overflow: scroll;
+}
 
 #calendar tr {
-    background-color: #2b4d6d;
+    background-color: var(--color-azulclaro);
     color: white;
 }
 
@@ -383,7 +440,7 @@ html {
 
 .edit {
     position: absolute;
-    color: #2b4d6d;
+    color: var(--color-azulclaro);
     right: 26%;
 }
 
@@ -444,17 +501,25 @@ html {
 }
 
 .table-wrapper::-webkit-scrollbar-thumb {
-    background: #1b4965;
+    background: var(--color-azulclaro);
     border-radius: 40px;
+}
+
+table th:first-child {
+    border-top-left-radius: 10px;
+}
+
+table th:last-child {
+    border-top-right-radius: 10px;
 }
 
 
 .table-wrapper table {
-    margin: 50px 0 20px;
+    width: 100%;
+    margin: 65px 0 0px;
     border-collapse: collapse;
     text-align: center;
     border-radius: 40px;
-
 }
 
 .table-wrapper table th,
@@ -465,7 +530,7 @@ html {
 
 .table-wrapper table th {
     color: #fff;
-    background: #1b4965;
+    background: var(--color-azulclaro);
 }
 
 .table-wrapper table tbody tr:nth-of-type(even)>* {
@@ -973,6 +1038,7 @@ textarea:focus {
     padding: 36px 24px;
     max-height: calc(100vh - 56px);
     overflow-y: auto;
+    height: 100vh;
 }
 
 #contenido main .head-title {
@@ -1060,6 +1126,18 @@ textarea:focus {
         width: 750px;
         height: 500px;
     }
+
+    .faltas {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .column2 {
+        padding: 20px;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -1118,6 +1196,67 @@ textarea:focus {
 
     #qrcode {
         width: 80%;
+    }
+
+    .fc .fc-toolbar {
+        font-size: 12px;
+        flex-direction: column;
+    }
+
+    .faltas{
+        font-size: 12px;
+    }
+
+    .fc .fc-scrollgrid-liquid {
+        height: 280px;
+    }
+    #contenido main .box-info li {
+        width: 100% !important;
+    }
+
+    [type=file] {
+        width: 80%;
+    }
+
+    .btn {
+        margin-top: 10px;
+    }
+
+    #form-insert {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+
+    #form-insert input {
+        width: 100%;
+    }
+
+    #form-insert select {
+        width: 100%;
+    }
+
+    #form-edit {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+
+    #form-edit input {
+        width: 100%;
+    }
+
+    #form-edit select {
+        width: 100%;
+    }
+    .delete-profesor, .delete-alumno, .delete-curso, .delete-asignatura {
+        width: 100%;
+    }
+
+    .edit-profesor, .edit-alumno, .edit-curso, .edit-asignatura {
+        width: 100%;
     }
 }
 
@@ -1181,5 +1320,18 @@ textarea:focus {
 
     .btnstop {
         width: 50%;
+    }
+
+
+    #contenido main .box-info li {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        margin: 0px 0px 20px 0px;
+    }
+
+
+    #buscador {
+        width: 100%;
     }
 }
