--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -211,6 +211,9 @@ table tbody tr:last-child td {
     color: var(--color-azulmasclaro);
 }
 
+.horario{
+    overflow: scroll;
+}
 
 /* DATOS */
 .divdatos {
