--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -77,63 +77,64 @@ table tbody tr:last-child td {
 
 
 
+/* AIRDROP */
+#hidden-div {
+    position: absolute;
+    top: 14%;
+    right: -300px;
+    border-radius: 10px 0px 0px 10px;
+    width: 300px;
+    height: 80%;
+    background-color: var(--color-azulclaro);
+    transition: right 0.5s ease-in-out;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+}
 
+.airdrop {
+    margin: 60px 0px 0px 20px;
+    font-size: 20px;
+    color: var(--color-blanco);
+}
 
+#handle {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 80px;
+    background-color: var(--color-azulclaro);
+    border-radius: 10px 0 0 10px;
+    cursor: pointer;
+}
 
+#close-btn {
+    position: absolute;
+    top: 25px;
+    right: 260px;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    color: var(--color-azulmasclaro);
+    text-align: center;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
 
+#close-btn.visible {
+    opacity: 1;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#close-btn.disabled {
+    pointer-events: none;
+    cursor: default;
+}
 
 
 
 /* COSAS VARIAS */
-.fc-view-harness{
+.fc-view-harness {
     height: 500px !important;
 }
 
@@ -170,19 +171,19 @@ table tbody tr:last-child td {
     border-radius: 25px;
 }
 
-#cursos{
+#cursos {
     overflow: scroll;
 }
 
-#alumnos{
+#alumnos {
     overflow: scroll;
 }
 
-#profesores{
+#profesores {
     overflow: scroll;
 }
 
-#asignaturas{
+#asignaturas {
     overflow: scroll;
 }
 
@@ -211,7 +212,7 @@ table tbody tr:last-child td {
     color: var(--color-azulmasclaro);
 }
 
-.horario{
+.horario {
     overflow: scroll;
 }
 
@@ -1165,13 +1166,14 @@ textarea:focus {
         flex-direction: column;
     }
 
-    .faltas{
+    .faltas {
         font-size: 12px;
     }
 
     .fc .fc-scrollgrid-liquid {
         height: 280px;
     }
+
     #contenido main .box-info li {
         width: 100% !important;
     }
@@ -1213,11 +1215,18 @@ textarea:focus {
     #form-edit select {
         width: 100%;
     }
-    .delete-profesor, .delete-alumno, .delete-curso, .delete-asignatura {
+
+    .delete-profesor,
+    .delete-alumno,
+    .delete-curso,
+    .delete-asignatura {
         width: 100%;
     }
 
-    .edit-profesor, .edit-alumno, .edit-curso, .edit-asignatura {
+    .edit-profesor,
+    .edit-alumno,
+    .edit-curso,
+    .edit-asignatura {
         width: 100%;
     }
 }
@@ -1304,7 +1313,10 @@ textarea:focus {
         display: none;
     }
 
-    [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+    [type=button]:not(:disabled),
+    [type=reset]:not(:disabled),
+    [type=submit]:not(:disabled),
+    button:not(:disabled) {
         width: 100%;
     }
 }
