--- a/resources/css/stylespassword.css
+++ b/resources/css/stylespassword.css
@@ -177,21 +177,26 @@ textarea:focus {
 
 /* RESPONSIVE */
 @media only screen and (max-width: 1450px) {
-    #clickme, #clickme2 {
+
+    #clickme,
+    #clickme2 {
         right: 125px;
     }
 }
 
 @media only screen and (max-width: 1250px) {
-    #clickme, #clickme2 {
+
+    #clickme,
+    #clickme2 {
         right: 110px;
-    } 
+    }
 }
 
 @media only screen and (max-width: 1200px) {
     .classcheck2 {
         left: 40%;
     }
+
     .contenedorloginmediano h1 {
         font-size: 20px;
     }
@@ -207,7 +212,9 @@ textarea:focus {
         width: 100px;
         left: 29%;
     }
-    #clickme, #clickme2 {
+
+    #clickme,
+    #clickme2 {
         right: 100px;
     }
 }
@@ -224,7 +231,9 @@ textarea:focus {
     .classcheck2 {
         left: 32%;
     }
-    #clickme, #clickme2{
+
+    #clickme,
+    #clickme2 {
         right: 121px;
     }
 }
@@ -247,7 +256,9 @@ textarea:focus {
     .classcheck2 {
         left: 30%;
     }
-    #clickme, #clickme2 {
+
+    #clickme,
+    #clickme2 {
         right: 100px;
     }
 }
@@ -256,7 +267,9 @@ textarea:focus {
     .classcheck2 {
         left: 32%;
     }
-    #clickme, #clickme2 {
+
+    #clickme,
+    #clickme2 {
         right: 75px;
     }
 }
