--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -1046,17 +1046,7 @@ textarea:focus {
     align-items: center;
 }
 
-#contenido main .box-info li:nth-child(1) .bx {
-    background: var(--color-azuloscuro);
-    color: var(--color-azulmasclaro);
-}
-
-#contenido main .box-info li:nth-child(2) .bx {
-    background: var(--color-azuloscuro);
-    color: var(--color-azulmasclaro);
-}
-
-#contenido main .box-info li:nth-child(3) .bx {
+#contenido main .box-info  .bx {
     background: var(--color-azuloscuro);
     color: var(--color-azulmasclaro);
 }
