--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -131,9 +131,16 @@ table tbody tr:last-child td {
     cursor: default;
 }
 
+#close-btn:hover{
+    color: var(--color-azuloscuro);
+    transition: 0.2s;
+}
+
 
 
 /* COSAS VARIAS */
+
+
 .fc-view-harness {
     height: 500px !important;
 }
@@ -225,6 +232,7 @@ table tbody tr:last-child td {
     color: var(--color-blanco);
     border-radius: 10px;
     font-size: 20px;
+    overflow: scroll;
 }
 
 .divdatos input {
@@ -1046,7 +1054,7 @@ textarea:focus {
     align-items: center;
 }
 
-#contenido main .box-info  .bx {
+#contenido main .box-info .bx {
     background: var(--color-azuloscuro);
     color: var(--color-azulmasclaro);
 }
@@ -1224,6 +1232,12 @@ textarea:focus {
 
 
 @media screen and (max-width: 576px) {
+
+    #cambiar {
+        margin: 20px 0px 0px 0px;
+    }
+
+
     #contenido main .box-info li .bx {
         width: 140px;
         height: 80px;
