PUNTO DE CONTROL

--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -1530,6 +1530,14 @@ textarea:focus {
 
 
 @media screen and (max-width: 576px) {
+    .tabla button {
+        border-radius: 10px 10px 0px 0px !important;
+    }
+
+    .tablacontenido {
+        border-radius: 0px 0px 10px 10px !important;
+    }
+
     .btnNolista p {
         font-size: 30px;
     }
