--- a/resources/css/stylesmodal.css
+++ b/resources/css/stylesmodal.css
@@ -146,13 +146,22 @@
             }
     
             .modal__close2 {
-            position: absolute;
-            top: 10px;
-            right: 15px;
-            color: #fff;
-            text-decoration: none;
-            font-size: 20px;
-        }
+                position: absolute;
+                top: 10px;
+                right: 15px;
+                color: #fff;
+                text-decoration: none;
+                font-size: 20px;
+            }
+
+            .modal__close1 {
+                position: absolute;
+                top: 10px;
+                right: 15px;
+                color: #fff;
+                text-decoration: none;
+                font-size: 20px;
+            }
 
     
            
