--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -32,7 +32,7 @@ body {
 }
 
 :root {
-    --color-negro: #000;
+    --color-negro: #0f1d36;
     --color-azuloscuro: #142c44;
     --color-azulclaro: #2b4d6d;
     --color-azulmasclaro: #85b7e5;
