--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -17,7 +17,7 @@ body {
     background-color: transparent;
 }
 
-#calendar{
+#calendar {
     height: 467px;
 }
 
@@ -859,7 +859,7 @@ select {
     border-radius: 5px !important;
     padding: 3px 10px;
     text-align: center;
-    margin: 3px;
+    margin: 1px;
 }
 
 .btn:hover {
@@ -1427,7 +1427,7 @@ textarea:focus {
         justify-content: center;
     }
 
-    .column2 {  
+    .column2 {
         padding: 20px;
         width: 100%;
     }
@@ -1703,9 +1703,6 @@ textarea:focus {
         display: none;
     }
 
-    .importar {
-        display: none;
-    }
 
     [type=button]:not(:disabled),
     [type=reset]:not(:disabled),
@@ -1718,8 +1715,17 @@ textarea:focus {
         width: 100%;
         height: 5vh;
     }
+
     #alumnos {
         width: 100%;
+    }
+
+    .importar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: 40vh;
     }
 
 }
@@ -1728,14 +1734,17 @@ textarea:focus {
     float: left !important;
     width: 50%;
 }
+
 .btn_panel {
     width: 50%;
     float: right !important;
 }
+
 .filtraje {
     width: 100%;
     height: 6.8vh;
 }
+
 .importar button:not(#imp) {
     float: right;
 }
